syntax = "proto3";

package dev.zacsweers.metro.compiler.proto;

option java_package = "dev.zacsweers.metro.compiler.proto";
option java_multiple_files = true;

message DependencyGraphProto {
  // Required boolean "isGraph"
  bool is_graph = 1;

  // Required map of ClassIds (as strings) of provider factory classes
  // If is_graph is true, this includes _all_ inherited classes' factories too
  repeated string provider_factory_classes = 2;

  // Set of accessor callable names (strings)
  repeated string accessor_callable_names = 3;

  // Bit field to represent which accessor indices are multibindings
  // Stored as multiple 32-bit integers to support >32 accessors
  repeated int32 multibinding_accessor_indices = 4;

  // Set of all transitively included binding container class IDs (strings)
  repeated string included_binding_containers = 5;
}

message AssistedFactoryImplProto {
  // The name of the SAM function in the factory interface
  string sam_function_name = 1;

  // The simple name of the generated impl class
  string impl_class_name = 2;
}

message InjectedClassProto {
  // The simple name of the generated factory class. Can be optional if this only has member injections
  optional string factory_class_name = 1;
  // Optional member injections (if any)
  optional MemberInjectionsProto member_injections = 2;
}

message MemberInjectionsProto {
  // The simple name of the generated injector class
  string injector_class_name = 1;

  repeated string member_inject_functions = 2;
}

// IMPORTANT: When making breaking changes to this file, you must increment
// METADATA_VERSION in compiler/build.gradle.kts
message MetroMetadata {
  // Metadata version for compatibility checking. Must match METADATA_VERSION in buildconfig.
  int32 version = 1;

  DependencyGraphProto dependency_graph = 2;

  InjectedClassProto injected_class = 3;

  AssistedFactoryImplProto assisted_factory_impl = 4;
}